# poc-dependabot

./: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  dependabot.yaml
.github/workflows/: codeql-analysis.yaml  codeql-analysis.yml  combine-dependabot-prs.yaml  dependabot-auto-merge.yaml
conda/: dev.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
poc_dependabot/: __init__.py
tests/: test_poc_dependabot.py
