[tool.poetry]
name = "poc-dependabot"
version = "1.0.0"
description = ""
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
typer = {extras = ["all"], version = "^0.4.0"}
rich = "^11.1.0"
numpy = "<1.23"
pandas = "^1.4.1"
pymc3 = "^3.11.4"
scipy = "^1.7.3"
arviz = "^0.11.4"
matplotlib = "^3.5.1"
plotly = "^5.5.0"
geopandas = "^0.10.2"
sshtunnel = "^0.4.0"
SQLAlchemy = "^1.4.29"
psycopg2-binary = "^2.9.3"
GeoAlchemy2 = "^0.11.0"
pytrends = "^4.7.3"
Theano-PyMC = "^1.1.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.3"
black = {version = "^22.1", allow-prereleases = true}
darglint = "^1.8.1"
isort = {extras = ["colors"], version = "^5.10.1"}
mypy = "^0.931"
mypy-extensions = "^0.4.3"
pre-commit = "^2.15.0"
pydocstyle = "^6.1.1"
pylint = "^2.11.1"
pytest = "^7.0.1"
pyupgrade = "^2.29.1"
safety = "^1.10.3"
coverage = "^6.3"
coverage-badge = "^1.1.0"
pytest-html = "^3.1.1"
pytest-cov = "^3.0.0"
Sphinx = "^4.4.0"
myst-parser = "^0.17.0"
sphinx-pyproject = "^0.1.0"
nbsphinx = "^0.8.8"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
